pkg/workloads/gollum/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gollum
  namespace: gollum
  labels:
    app: gollum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gollum
  template:
    metadata:
      name: gollum
      namespace: gollum
      labels:
        app: gollum
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: app
                  operator: In
                  values:
                    - compute
      containers:
      - name: gollum
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "3Gi"
            cpu: "2000m"
